<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/d20" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_marginLeft="@dimen/d10"
            style="@style/textviewtitle"
            android:text="@string/blockid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4" />

        <TextView
            android:layout_marginLeft="@dimen/d20"
            style="@style/textviewtitle"
            android:text="@string/time"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            />

        <TextView
            style="@style/textviewtitle"
            android:text="@string/Witnesses1"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3" />

        <TextView
            android:layout_marginRight="@dimen/d10"
            android:layout_gravity="center_horizontal"
            style="@style/textviewtitle"
            android:text="@string/count"
            android:gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0" />
    </LinearLayout>

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/d20" />
</LinearLayout>