<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_rect"
    android:elevation="@dimen/d4"
    android:orientation="vertical"
    android:translationZ="@dimen/d4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/d12"
        android:layout_marginRight="@dimen/d12"
        android:layout_marginTop="@dimen/d12"
        android:orientation="vertical">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/back" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registration" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d35"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/user2" />

            <android.support.v4.widget.Space
                android:layout_width="@dimen/d15"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/registration_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/user_name"
                android:textColorHint="@color/gray_hint"
                android:textSize="@dimen/s14" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/d1"
            android:layout_marginTop="@dimen/d10"
            android:background="@color/gray_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d15"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/lock2" />

            <android.support.v4.widget.Space
                android:layout_width="@dimen/d15"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/registration_password"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="@color/gray_hint"
                android:textSize="@dimen/s14" />

            <ImageView
                android:id="@+id/eye_register_password"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="5dp"
                android:src="@drawable/password" />

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/d1"
            android:layout_marginTop="@dimen/d10"
            android:background="@color/gray_line" />

        <TextView
            android:id="@+id/password_cue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/d2"
            android:layout_marginTop="@dimen/d2"
            android:text="@string/enterpassword"
            android:textColor="@color/red"
            android:textSize="@dimen/s9" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d15"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/lock2" />

            <android.support.v4.widget.Space
                android:layout_width="@dimen/d15"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/registration_confirm"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/Confirmpassword"
                android:inputType="textPassword"
                android:textColorHint="@color/gray_hint"
                android:textSize="@dimen/s14" />

            <ImageView
                android:id="@+id/eye_register_confirm_password"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/password"
                android:padding="5dp"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/d1"
            android:layout_marginTop="@dimen/d10"
            android:background="@color/gray_line" />

        <TextView
            android:id="@+id/confirm_cue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/d2"
            android:layout_marginTop="@dimen/d2"
            android:text="@string/red_confirmation"
            android:textColor="@color/red"
            android:textSize="@dimen/s9" />


        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/d80" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/loginbtn" />
        </LinearLayout>

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/d20" />
    </LinearLayout>
</LinearLayout>