<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg2"
    android:orientation="vertical">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/d20"
        >

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@mipmap/iv_black_back"
                android:padding="10dp" />
            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/d40" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/avatar" />
            </RelativeLayout>
            <TextView
                android:id="@+id/tv_Version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1.0.0"
                android:padding="10dp"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="@dimen/s12"
                />

            <TextView
                android:id="@+id/tv_check_version"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/CheckVersion"
                android:background="@drawable/btn_sendout"
                android:padding="10dp"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/d40"/>
            <TextView
                android:id="@+id/tv_languages"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/languages"
                android:background="@drawable/btn_sendout"
                android:padding="10dp"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/tv_exit"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/out"
                android:background="@drawable/btn_sendout"
                android:padding="10dp"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/d30"/>
        </LinearLayout>
        <FrameLayout
            android:id="@+id/bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.4"
            android:background="@color/black"
            android:visibility="gone">

        </FrameLayout>
    </FrameLayout>

</LinearLayout>